--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -142,6 +142,9 @@ services:
       retries: 5
       start_period: 30s
     restart: always
+    environment: # <-- ADDED ENVIRONMENT BLOCK
+      <<: *airflow-common-env
+      GEMINI_API_KEY: ${GEMINI_API_KEY} # <-- SECURE KEY REFERENCE
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -161,6 +164,7 @@ services:
       start_period: 30s
     environment:
       <<: *airflow-common-env
+      GEMINI_API_KEY: ${GEMINI_API_KEY} # <-- SECURE KEY REFERENCE
       # Required to handle warm shutdown of the celery workers properly
       # See https://airflow.apache.org/docs/docker-stack/entrypoint.html#signal-propagation
       DUMB_INIT_SETSID: "0"
