added spatiotemporal project to pipeline

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -68,7 +68,12 @@ x-airflow-common:
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
     # WARNING: Use _PIP_ADDITIONAL_REQUIREMENTS option ONLY for a quick checks
     # for other purpose (development, test and especially production usage) build/extend Airflow image.
-    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
+    _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-garminconnect google-cloud-bigquery db-dtypes python-dotenv}
+    # Garmin credentials for spatiotemporal pipeline
+    GARMIN_USERNAME: ${GARMIN_USERNAME}
+    GARMIN_PASSWORD: ${GARMIN_PASSWORD}
+    # GCP credentials path (volume mounted)
+    GOOGLE_APPLICATION_CREDENTIALS: /opt/airflow/spatiotemporal/spatiotemporal-key.json
     # The following line can be used to set a custom config file, stored in the local config folder
     # If you want to use it, outcomment it and replace airflow.cfg with the name of your config file
     # AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg'
@@ -77,6 +82,7 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+    - /Users/tolgasabanoglu/Desktop/github/spatiotemporal:/opt/airflow/spatiotemporal
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
