Security: Enhance .gitignore with comprehensive credential protection
- Added credential file patterns (*-key.json, *.pem, *.key)
- Added environment variable patterns (.env, .env.local, .env.*.local)
- Added Python cache patterns
- Added IDE and system file patterns
- Added Airflow runtime file patterns

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,38 @@
-.DS_Store
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# Credentials
+*-key.json
+*.pem
+*.key
+
+# macOS
+.DS_Store
+._*
 
 # Airflow runtime files
 logs/
 airflow-webserver.pid
 airflow-scheduler.pid
+airflow.db
+airflow.cfg
+standalone_admin_password.txt
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Virtual environment
+venv/
+env/
+ENV/
